--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /data/daily_Prec_19800101-20140228.dat
 /data/uwnd_WIND_CCMP_merge_OISST_weekly.dat
 /data/vwnd_WIND_CCMP_merge_OISST_weekly.dat
+/data/OISST_19811101-20161116.dat
